<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/default_margin">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/size_img_slide1"
        android:layout_height="@dimen/size_img_slide1"
        android:contentDescription="@string/description_image"
        android:src="@drawable/ic_appname" />

    <br.com.ufpb.ittalopessoa.t_mind.util.RobotoMedium
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/slide_01_title"
        android:textColor="@color/md_red_700"
        android:textSize="@dimen/fontsize_title" />

    <br.com.ufpb.ittalopessoa.t_mind.util.RobotoRegular
        android:id="@+id/subtitle_slide1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/slide_01_subtitle"
        android:textColor="@color/md_red_300"
        android:textSize="@dimen/fontsize_title" />

</LinearLayout>