<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_red_A200"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/default_margin">

        <ImageView
            android:layout_width="@dimen/size_ico_menu"
            android:layout_height="@dimen/size_ico_menu"
            android:layout_gravity="center"
            android:layout_margin="@dimen/default_margin"
            android:contentDescription="@string/description_image"
            android:src="@drawable/ic_man_square" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/max_exp_margin"
            card_view:cardBackgroundColor="@color/md_white_1000"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/min_margin">

                <br.com.ufpb.ittalopessoa.t_mind.util.RobotoMedium
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/level_text_intermediate"
                    android:textColor="@color/md_text"
                    android:textSize="@dimen/fontsize_title" />

                <br.com.ufpb.ittalopessoa.t_mind.util.RobotoRegular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:gravity="center"
                    android:text="@string/level_description"
                    android:textColor="@color/md_secondary_text_icons"
                    android:textSize="@dimen/fontsize_subhead" />

                <Button
                    android:id="@+id/start_intermediate"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_button_height"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/min_margin"
                    android:background="@drawable/raised_button_red_a200"
                    android:padding="@dimen/min_margin"
                    android:text="@string/button_start_level"
                    android:textAllCaps="true"
                    android:textColor="@color/md_text_white" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>