<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progress_login"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/default_margin"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/email_login_form"
        android:scrollbars="none|vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin"
            android:orientation="vertical">

            <ImageView
                android:contentDescription="@string/description_image"
                android:id="@+id/imageLogin"
                android:layout_width="@dimen/size_img_login"
                android:layout_height="@dimen/size_img_login"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/default_margin"
                android:src="@drawable/ic_people_shadow" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/max_margin"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="@dimen/fontsize_subhead" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="@dimen/fontsize_subhead" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/med_margin"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/email_sign_in_button"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/size_button_height"
                        android:layout_gravity="center"
                        android:background="@drawable/raised_button_border_red"
                        android:text="@string/button_login"
                        android:textSize="@dimen/fontsize_button"
                        android:textAllCaps="true"
                        android:textColor="@color/md_red_700" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>